--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "body": "^5.1.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.15",
     "parser": "^0.1.4"
   },
   "devDependencies": {
+    "eslint": "^7.0.0",
     "nodemon": "^2.0.4"
   }
 }
