--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "planner",
   "version": "1.0.0",
-  "description": "simple plannerтзь",
+  "description": "simple planner",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
